# DRVI

./: .cruft.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_output.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  references.bib  references.md  requirements.txt  tutorials.md
docs/api/: index.md  internal.md  metrics.md  model.md  plotting.md  tools.md
docs/notebooks/: example.ipynb  general_pipeline.py
docs/source/: api.rst  conf.py  index.rst
docs/tutorials/: index.md
drvi/: __init__.py
drvi/module/: embedding.py  encodig.py  noise_model.py  prior.py
drvi/module/layer/: __init__.py  factory.py
drvi/scvi_tools_based/: _archesmixin.py  _base_components.py  _fields.py  _generative_mixin.py  _model.py  _module.py
drvi/scvi_tools_based/merlin_data/: __init__.py  _data.py  _data_loader.py  _data_splitter.py  _fields.py
drvi/utils/: cmap.py  hvg.py  interpretability.py  metrics.py
drvi/utils/interpretation/: __init__.py  latent_to_expression.py
drvi/utils/notebooks/: __init__.py  latent_analysis.py  network_inspection.py
drvi/utils/user/: __init__.py  general.py  plotting.py
src/drvi/: __init__.py
src/drvi-py/: __init__.py
src/drvi/internal/: __init__.py  _metrics.py  _model.py  _module.py
src/drvi/internal/drvi/: __init__.py  _base_components.py  _generative_mixin.py  _model.py  _module.py  _trainingplan.py
src/drvi/model/: __init__.py
src/drvi/module/: dict_io.py  encodig.py  feature_interface.py  freezable.py  noise_model.py
src/drvi/module/layer/: __init__.py  factory.py  linear_layer.py
src/drvi/nn_modules/: embedding.py  encodig.py  feature_interface.py  freezable.py  gradients.py  noise_model.py  prior.py
src/drvi/nn_modules/layer/: __init__.py  factory.py  linear_layer.py  structures.py
src/drvi/scvi_tools_based/: __init__.py  _archesmixin.py  _base_components.py  _generative_mixin.py  _model.py  _module.py
src/drvi/scvi_tools_based/data/: __init__.py
src/drvi/scvi_tools_based/data/fields/: __init__.py  _fixed_fields.py
src/drvi/scvi_tools_based/merlin_data/: __init__.py  _data.py  _data_loader.py  _data_manager.py  _data_splitter.py  _fields.py  _utils.py
src/drvi/scvi_tools_based/merlin_data/fields/: __init__.py  _fields.py
src/drvi/scvi_tools_based/model/: __init__.py  _drvi.py
src/drvi/scvi_tools_based/model/base/: __init__.py  _archesmixin.py  _generative_mixin.py  _interpretability_mixin.py
src/drvi/scvi_tools_based/module/: __init__.py  _constants.py  _drvi.py  _metrics.py  _training_plan.py
src/drvi/scvi_tools_based/nn/: __init__.py  _base_components.py
src/drvi/scvi_tools_based/util/: _sparse_arrays.py
src/drvi/utils/: __init__.py  hvg.py  interpretability.py  metrics.py  porting.py  torch.py
src/drvi/utils/interpretation/: __init__.py  latent_to_expression.py
src/drvi/utils/metrics/: __init__.py  _aggregation.py  _benchmark.py  _pairwise.py
src/drvi/utils/misc/: __init__.py  _hvg.py
src/drvi/utils/notebooks/: __init__.py  latent_analysis.py  network_inspection.py
src/drvi/utils/plotting/: __init__.py  _cmap.py  _interpretability.py  _latent.py
src/drvi/utils/tools/: __init__.py  _latent.py
src/drvi/utils/tools/interpretability/: _differential_vars.py  _latent_traverse.py
src/drvi/utils/user/: __init__.py  general.py  plotting.py  tools.py
tests/: test_basic.py
tests/data/porting/: README.md
tests/data/porting/default/: model.pt
tests/data/porting/dispersion_gene_batch/: model.pt
tests/data/porting/dispersion_gene_cell/: model.pt
tests/data/porting/reuse_nowhere/: model.pt
tests/drvi_model/: test_interpretability_mixin.py  test_model.py
tests/integration_tests/: test_rnaseq_mixin_compatibility.py  test_simple_pipeline.py
tests/internal/: test_drvi_model.py  test_internal_model.py
tests/module/: test_embedding.py  test_encoding.py  test_feature_interface.py  test_gradients.py
tests/scvi_tools_based/: test_model.py
tests/utils/: test_porting.py
tests/utils/metrics/: test_disentanglement_discrete_benchmark.py
tutorial/: general_pipeline.py
